added: presentation | added: dtu-section-poster

--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -34,7 +34,7 @@
 \newcommand{\ParStrategicValue}[1][\VarMetaTime]{strategic\_value_{\ElementWorkOrder \ElementPeriod}(#1)}
 \newcommand{\ParStrategicPenalty}{strategic\_penalty}
 \newcommand{\ParClusteringValue}{clustering\_value_{\ElementWorkOrder1, \ElementWorkOrder2}}
-\newcommand{\ParStrategicResource}{resource_{\ElementPeriod\ElementResource}(\VarMetaTime)}
+\newcommand{\ParStrategicResource}{resource_{\ElementPeriod\ElementResource}(\VarMetaTime, \VarTacticalWork{}{})}
 
 \newcommand{\ParStrategicWorkOrderWeight}{work\_order\_work_{\ElementWorkOrder \ElementResource}}
 \newcommand{\ParStrategicInclude}{include(\VarMetaTime)}
