--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -19,7 +19,7 @@
 \pagestyle{fancy}
 
 \begin{document}
-\title{Multi-agent Maintenance Scheduling: \\ The Making of a Science}
+\title{Multi-actor Maintenance Scheduling}
 \author{Christian Brunbjerg Jespersen}
 \date{\today}
 \maketitle
