--- a/tex/models/tactical.tex
+++ b/tex/models/tactical.tex
@@ -1,49 +1,28 @@
-\section{The Tactical Model}
-\begin{itemize}
-	\item Respect precedence constraints
-	\item Respect daily resource requirements for each trait
-	\item Penalize exceeded daily capacity
-\end{itemize}
-
-After the strategic model has optimized its schedule the tactical agent will continue scheduling the output at a more detailed level. This means that now the tactical agent will schedule 
-out on each of the days of the work orders scheduled by the strategic agent. 
-
-The tactical model is responsible for providing an initial suggestion for a weekly schedule, below we see the model for the tactical agent.
+\newpage
 \begin{alignat}{2}
-	& \textbf{Meta variables:} \notag\\
-	& \ElementScheduler = \SetScheduler \notag\\
-	& \tau \in [0, \infty] \notag\\
-	& \VarStrategicWorkOrderAssignment{}{} \notag\\
-	& \textbf{Minimize:} \notag\\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue!!!!!!!!!!!!! \cdot \VarTacticalWork{\ElementDays}{\ElementOperation}\notag\\  
-	& + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                               \\  
-	& \textbf{Subject to:}                                                          \notag                                                                   \\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{\ElementOperation} \cdot \VarTacticalWork{\ElementDays}{\ElementOperation}\notag\\
-	& \quad \leq \ParTacticalResource + \VarTacticalExcess\notag\\ 
-	& \quad \forall \ElementDays \in \SetDays{} \quad \forall r \in \SetResource\\ 
-	& \sum_{\ElementDays = \ParEarliestStart}^{\ParLatestFinish} \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} = \ParDuration \notag\\
-	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
-	& \sum_{\ElementDays^* \in  \SetDays{\ParDuration}} \VarTacticalWorkBinary{\ElementDays^*}{\ElementOperation} \notag\\
-	& \quad = \ParDuration \cdot \VarTacticalWorkBinaryConsecutive \notag\\ 
-	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall \ElementDays \in \SetDays{} \\
-	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1, \notag\\
-	& \quad \forall \ElementDays \in \SetDays{} \notag\\
-	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} + \VarTacticalOperationDifference  = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}                   \notag  \\ 
-	& \quad \forall (o1, \ElementOperation2) \in \ParFinishStart                                                           \\ 
-	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}  \notag                               \\ 
-	& \quad \forall (o1, \ElementOperation2) \in \ParStartStart                                                       \\ 
-	& \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParNumberOfPeople \cdot \ParOperatingTime \notag                                                     \\ 
-	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                  \\
-	& \VarTacticalWork{\ElementDays}{\ElementOperation} \in \mathbb{R} \quad \notag\\
-	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                         \\
-	& \VarTacticalExcess \in \mathbb{R} \quad\notag\\
-	& \quad \forall r \in \SetResource \quad \forall \ElementDays \in \SetDays{}                                        \\
-	& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad \notag\\
-	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
-	& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad \notag\\
-	& \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \\
-	& \VarTacticalOperationDifference \in \{0, 1\} \\
-	& \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                      \\
-	& \VarMetaTime \in  [0, \infty] 
+	& \text{\rule{\linewidth}{0.4pt}} \notag\\
+	& \textbf{Meta variables:}                                                                                                                                                                                                                                                             \notag\\
+	& \ElementScheduler = \SetScheduler                                                                                                                                                                                                                                                    \\
+	& \VarStrategicWorkOrderAssignment{}{}                                                                                                                                                                                                                                                 \\
+	& \tau \in [0, \infty]                                                                                                                                                                                                                                                                 \\
+	& \text{\rule{\linewidth}{0.4pt}} \notag\\
+	& \textbf{Minimize:}                                                                                                                                                                                                                                                                   \notag\\
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \sum_{\ElementDays \in \SetDays{}} \ParTacticalValue \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} + \sum_{r \in \SetResource} \sum_{\ElementDays \in \SetDays{}} \ParTacticalPenalty \cdot \VarTacticalExcess                                                                                                                                                                                \\  
+	& \text{\rule{\linewidth}{0.4pt}} \notag\\
+	& \textbf{Subject to:}                                                                                                                                                                                                                                                                 \notag\\
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \ParOperationWork{\ElementOperation} \cdot \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParTacticalResource + \VarTacticalExcess \forall \ElementDays \in \SetDays{} \quad \forall r \in \SetResource                                                                                                                                                                                                                 \\ 
+	& \sum_{\ElementDays = \ParEarliestStart}^{\ParLatestFinish} \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} = \ParDuration                                                                                                                                 \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                                                                  \\
+	& \sum_{\ElementDays^* \in  \SetDays{\ParDuration}} \VarTacticalWorkBinary{\ElementDays^*}{\ElementOperation}                                                                                                                    = \ParDuration \cdot \VarTacticalWorkBinaryConsecutive                                                                                                                                                                                                        \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}} \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                        \\
+	& \sum_{\ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}} \VarTacticalWorkBinaryConsecutive = 1,                                                                                                                                         \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                                            \notag\\
+	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} + \VarTacticalOperationDifference  = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}  \quad \forall (o1, \ElementOperation2) \in \ParFinishStart                                                                                                                                                                                                                                 \\ 
+	& \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation1} = \sum_{\ElementDays \in \SetDays{}} \ElementDays \cdot \VarTacticalWorkBinary{\ElementDays}{\ElementOperation2}                                     \quad \forall (o1, \ElementOperation2) \in \ParStartStart                                                                                                                                                                                                                                  \\ 
+	& \VarTacticalWork{\ElementDays}{\ElementOperation} \leq \ParNumberOfPeople \cdot \ParOperatingTime                                                                                                                                                                   \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+	& \VarTacticalWork{\ElementDays}{\ElementOperation} \in \mathbb{R} \quad                                                                                                                                                                                            \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+	& \VarTacticalExcess \in \mathbb{R} \quad                                                                                                                                                                                                                           \quad \forall r \in \SetResource \quad \forall \ElementDays \in \SetDays{}                                                                                                                                                                                                                 \\
+	& \VarTacticalWorkBinary{\ElementDays}{\ElementOperation} \in \{0, 1\}\quad                                                                                                                                                                                         \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+	& \VarTacticalWorkBinaryConsecutive \in \{0, 1\}\quad                                                                                                                                                                                                               \quad \forall \ElementDays \in \SetDays{} \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}                                                                                                                                                        \\
+	& \VarTacticalOperationDifference \in \{0, 1\}                                                                                                                                                                                                                              \quad \forall \ElementOperation \in \SetOperation{}{\VarStrategicWorkOrderAssignment{}{}}\\
+	& \text{\rule{\linewidth}{0.4pt}} \notag
 \end{alignat}
+\newpage
 
