added: poster material

--- a/figures/ordinator-architecture.tex
+++ b/figures/ordinator-architecture.tex
@@ -1,42 +1,102 @@
-
 \usetikzlibrary {positioning}
+
+
+\definecolor{red}{HTML}{8A3F3A}
+\definecolor{yellow}{HTML}{E0BB3C}
+\definecolor{blue}{HTML}{4569E0}
+\definecolor{green}{HTML}{17E561}
+\definecolor{other}{HTML}{6A939E}
+
 \newcommand{\ModelColor}{red}
 \newcommand{\UserInterfaceColor}{yellow}
 \newcommand{\PersistenceColor}{blue}
 \newcommand{\PointerSwapColor}{green}
-\newcommand{\OrchestratorColor}{blue}
+\newcommand{\OrchestratorColor}{other}
 
-\begin{tikzpicture}[
-	% Define styles and settings
-	node distance=2cm,
-	block/.style={rectangle, draw, fill=blue!20, text centered, minimum height=3em},
-	arrow/.style={-Stealth, thick}
-	]
-	% \draw[help lines] (0, 0) grid (10, 8);
-  
-	\draw (5,4) node[minimum height=5cm,minimum width=7.0cm,draw,rounded corners=5pt] {};
+\pgfkeys{
+	/graph/.is family, /graph,
+	default/.style = {
+		show_shared_pointer = false,
+		show_orchestrator = false,
+		show_persistence = false,
+		show_user_interface = false,
+	},
+	show_shared_pointer/.estore in = \ShowSharedSolutionCommunication,
+	show_orchestrator/.estore in = \ShowOrchestratorCommunication,
+	show_persistence/.estore in = \ShowPersistenceCommunication,
+	show_user_interface/.estore in = \ShowUserInterfaceCommunication,
+}
 
-	    \draw (2.5,5.5) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt] (Strategic) {Stra};
-	    \draw (5.0,4.0) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt] (Supervisor) {Sup};
-		\draw (7.5,5.5) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt] (Tactical) {Tac};
 
-		\draw (2.5,2.5) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt] (Operational_1) {$O_{1}$};
-		\draw (5.0,2.5) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt] (Operational_2) {$O_{2}$};
-		\draw (7.5,2.5) node[minimum height=1cm,minimum width=1cm,draw,fill=\ModelColor,rounded corners=5pt,rounded corners=5pt] (Operational_3) {$O_{3}$};
-		
+\newcommand{\drawGraph}[1]{
+
+	\pgfkeys{/graph, default, #1}
+	
+	\begin{tikzpicture}[scale=0.75][
+		% Define styles and settings
+		node distance=2cm,
+		block/.style={rectangle, draw, fill=blue!20, text centered, minimum height=3em},
+		arrow/.style={-Stealth, thick}
+		]
+
+
+		\ifthenelse{\equal{\ShowOrchestratorCommunication}{true}}{
+			\draw[color=other,-, ultra thick] (Strategic) -- (Orchestrator);
+			\draw[color=other,-, ultra thick] (Tactical) -- (Orchestrator);
+			\draw[color=other,-, ultra thick] (Supervisor) -- (Orchestrator);
+			\draw[color=other,-, ultra thick] (Operational_1) -- (Orchestrator);
+			\draw[color=other,-, ultra thick] (Operational_2) -- (Orchestrator);
+			\draw[color=other,-, ultra thick] (Operational_3) -- (Orchestrator);
+		}{}
+		% \draw[help lines] (0, 0) grid (10, 8);
+		\draw (5,4) node[minimum height=5cm,minimum width=7.0cm,rounded corners=5pt] {};
+
+	    \draw (2.5,5.5) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt] (Strategic) {Stra};
+	    \draw (5.0,4.0) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt] (Supervisor) {Sup};
+		\draw (7.5,5.5) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt] (Tactical) {Tac};
+
+		\draw (2.5,2.5) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt] (Operational_1) {$O_{1}$};
+		\draw (5.0,2.5) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt] (Operational_2) {$O_{2}$};
+		\draw (7.5,2.5) node[minimum height=1cm,minimum width=1cm,fill=\ModelColor,rounded corners=5pt,rounded corners=5pt] (Operational_3) {$O_{3}$};
+	
 		\draw (Strategic) edge (Tactical);
-
 		\draw (Strategic) edge (Tactical);
 		\draw (5,5.5) edge (Supervisor);
-
 		\draw (Supervisor) edge (Operational_1);
 		\draw (Supervisor) edge (Operational_2);
 		\draw (Supervisor) edge (Operational_3);
-	\draw (5,0.5) node[minimum height=1cm,minimum width=6cm,draw,fill=\PersistenceColor,rounded corners=5pt] {SchedulingEnvironment};
-	\draw (5,7.5) node[minimum height=1cm,minimum width=6cm,draw,fill=\OrchestratorColor,rounded corners=5pt] {Orchestrator};
-	\draw (0.5,4) node[rotate=90, minimum height=1cm, minimum width=4cm,draw,fill=\PointerSwapColor,rounded corners=5pt] {SharedSolution};
-	\draw (9.5,5.5) node[rotate=90, minimum height=1cm, minimum width=1cm,draw,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
-	\draw (9.5,4) node[rotate=90, minimum height=1cm, minimum width=1cm,draw,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
-	\draw (9.5,2.5) node[rotate=90, minimum height=1cm, minimum width=1cm,draw,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
+		\draw (5.0,0.5)   node[minimum height=1cm,minimum width=5.0cm,            fill=\PersistenceColor,rounded corners=5pt] {SchedulingEnvironment};
+		\draw (5.0,7.5)   node[minimum height=1cm,minimum width=5.0cm,            fill=\OrchestratorColor,rounded corners=5pt] (Orchestrator) {Orchestrator};
+		\draw (0.5,4.0)   node[rotate=90, minimum height=1cm, minimum width=3.25cm,fill=\PointerSwapColor,rounded corners=5pt] {SharedSolution};
+		\draw (9.5,5.5) node[rotate=90, minimum height=1cm, minimum width=1cm,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
+		\draw (9.5,4.0)   node[rotate=90, minimum height=1cm, minimum width=1cm,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
+		\draw (9.5,2.5) node[rotate=90, minimum height=1cm, minimum width=1cm,fill=\UserInterfaceColor,rounded corners=5pt] {UI};
 
-\end{tikzpicture}
+		% Legend
+		\begin{scope}[shift={(10.6,5.7)}]
+			\node at (-0.25,1) [right] {Communication Type};
+			\draw[color=\OrchestratorColor,fill] (0,0.0) rectangle (0.5cm, 0.5cm);
+			\node[anchor=west] at (0.5, 0.25) {\scriptsize Channels};
+			\draw[color=\PointerSwapColor,fill] (0,-1.0) rectangle(0.5cm, -0.5cm); 
+			\node[anchor=west] at (0.5, -0.75) {\scriptsize Atomic Pointer Swap};
+			\draw[color=\ModelColor,fill] (0,-2.0) rectangle(0.5cm, -1.5cm); 
+			\node[anchor=west] at (0.5, -1.75) {\scriptsize Metaheurics};
+			\draw[color=\PersistenceColor,fill] (0,-3.0) rectangle(0.5cm, -2.5cm); 
+			\node[anchor=west] at (0.5, -2.75) {\scriptsize Mutex lock};
+			\draw[color=\UserInterfaceColor,fill] (0,-4.0) rectangle(0.5cm, -3.5cm); 
+			\node[anchor=west] at (0.5, -3.75) {\scriptsize Channels};
+		\end{scope}
+		\ifthenelse{\equal{\ShowSharedSolutionCommunication}{true}}{
+			\draw[->, thick] (Strategic) -- (Orchestrator);
+		}{}
+		\ifthenelse{\equal{\ShowUserInterfaceCommunication}{true}}{
+			\draw[->, thick] (Strategic) -- (Orchestrator);
+		}{}
+		\ifthenelse{\equal{\ShowPersistenceCommunication}{true}}{
+			\draw[->, thick] (Strategic) -- (Orchestrator);
+		}{}
+		
+
+	\end{tikzpicture}
+}
+
