--- a/posters/dtu-section-poster/main.tex
+++ b/posters/dtu-section-poster/main.tex
@@ -52,6 +52,10 @@
   \end{itemize}
 }
 
+\block{Solution Method}{
+ asd 
+}
+
 \block{Case Study}{
   \textbf{Supply Chain Management} \\
   A complex supply chain involving suppliers, manufacturers, distributors, and retailers. Each actor aims to optimize its own performance metrics, which may conflict with others. The multi-actor approach seeks a globally optimal solution that considers the objectives of all stakeholders.
